--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>DelJIRA</title>
   <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -32,14 +33,13 @@
         </div>
       </div>
       <div class="options">
-            <div class="add_box">
-
+            <div class="add  box">
+                <i class="fa-solid fa-plus icon"></i>
             </div>
-            <div class="delete_box">
-
+            <div class="delete box">
+                <i class="fa-solid fa-xmark icon"></i>
             </div>
-
-          </div>
+        </div>
 
         </div>
         <div class="main">
