created ticket html structure

--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -43,6 +43,16 @@
 
         </div>
         <div class="main">
+          <div class="ticket">
+        <div class = "ticket-header">
+        </div>
+         <div class = "ticket-content">
+           <textarea name="name" rows="8" cols="80"></textarea>
+        </div>
+
+
+    </div>
+
 
         </div>
 
