Full Ticket body updated

--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -44,11 +44,13 @@
         </div>
         <div class="main">
           <div class="ticket">
-        <div class = "ticket-header">
-        </div>
-         <div class = "ticket-content">
-           <textarea name="name" rows="8" cols="80"></textarea>
-        </div>
+              <div class="ticket-header">
+              </div>
+              <div class="ticket-content">
+              <div class="id">
+              </div>
+              <textarea name="name" rows="8" cols="80"></textarea>
+              </div>
 
 
     </div>
