Single Ticket CSS Complete

--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -47,15 +47,12 @@
               <div class="ticket-header">
               </div>
               <div class="ticket-content">
-              <div class="id">
+                <div class="rand-id">
+                  #QES4FGG
+                </div>
+                <textarea name="name" class="text-area"></textarea>
               </div>
-              <textarea name="name" rows="8" cols="80"></textarea>
-              </div>
-
-
-    </div>
-
-
+          </div>
         </div>
 
         <script src="jira.js" charset="utf-8"></script>
