Completed till random ticket id generation and color priority change of each ticket

--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -45,7 +45,7 @@
         <div class="main">
 
         </div>
-
+        <script src="user_id_generator.js" charset="utf-8"></script>
         <script src="jira.js" charset="utf-8"></script>
 </body>
 
