--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -40,6 +40,16 @@
                 <i class="fa-solid fa-xmark icon"></i>
             </div>
         </div>
+      <div class="options">
+
+            <div class="lock  box">
+                <i class="fa-solid fa-lock icon"></i>
+            </div>
+            <div class="unlock box">
+                <i class="fa-solid fa-lock-open icon "></i>
+            </div>
+        </div>
+
 
         </div>
         <div class="main">
