Done till lock/unlock background changing

--- a/Browser/Basic_JIRA_Clone/index.html
+++ b/Browser/Basic_JIRA_Clone/index.html
@@ -55,7 +55,14 @@
         <div class="main">
 
         </div>
+        <!-- Script is divided into different files for ease of programming -->
+        <!-- Generate user id -->
         <script src="user_id_generator.js" charset="utf-8"></script>
+        <!-- lock,unlock, and enable delete -->
+        <script src="app.js" charset="utf-8"></script>
+        <!-- filter the tickets -->
+        <script src="filter.js" charset="utf-8"></script>
+        <!-- creation and colour change of ticket -->
         <script src="jira.js" charset="utf-8"></script>
 </body>
 
