Added top row and left col

--- a/Excel_Clone/index.html
+++ b/Excel_Clone/index.html
@@ -18,10 +18,7 @@
             <div class="top_row"></div>
             <div class="left_col"></div>
             <div class="grid">
-                <div class="cell">
-                        Hello
-                </div>
-
+                
             </div>
 
         </div>
@@ -29,6 +26,6 @@
       <div class="sheets_container">
 
       </div>
-
+<script src="D:\Pepcoding\Javascript\Excel_Clone\js\script.js" charset="utf-8"></script>
   </body>
 </html>
