--- a/Excel_Clone/index.html
+++ b/Excel_Clone/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>MyExcel</title>
     <link rel="stylesheet" href="D:\Pepcoding\Javascript\Excel_Clone\css\styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
       <div class="menu_bar">
@@ -18,12 +19,16 @@
             <div class="top_row"></div>
             <div class="left_col"></div>
             <div class="grid">
-                
+
             </div>
 
         </div>
       </div>
       <div class="sheets_container">
+        <div class="add_sheet">
+          <i class="fa fa-plus"></i>
+        </div>
+        <div class="sheet" myId="1">Sheet 1</div>
 
       </div>
 <script src="D:\Pepcoding\Javascript\Excel_Clone\js\script.js" charset="utf-8"></script>
