--- a/Excel_Clone/index.html
+++ b/Excel_Clone/index.html
@@ -9,16 +9,51 @@
   <body>
       <div class="menu_bar">
 
+        <!-- Build a drop down -->
+        <select class="select_f_family" name="">
+          <option value="Courier New ">Courier New</option>
+          <option value="Arial">Arial</option>
+          <option value="Georgia">Geoargia</option>
+          <option value="Franklin Gothic Medium">Franklin Gothic Medium</option>
+          <option value="Trebuchet MS">Trebuchet MS</option>
+
+        </select>
+
+        <select class="select_f_size" name="">
+          <option value="12">small</option>
+          <option value="14">medium</option>
+          <option value="16">large</option>
+          <option value="18">xl</option>
+        </select>
+
+        <!-- BUI Container -->
+        <div class="bui_container">
+          <i class="fas fa-bold "></i>
+            <i class="fas fa-underline "></i>
+            <i class="fas fa-italic"></i>
+        </div>
+
+        <!-- Alignment container -->
+        <div class="alignment_container">
+          <i class="fas fa-align-right right"></i>
+          <i class="fas fa-align-center center"></i>
+          <i class="fas fa-align-justify justify"></i>
+          <i class="fas fa-align-left left"></i>
+
+        </div>
+
+
       </div>
       <div class="formula_container">
 
       </div>
       <div class="grid_container">
+              <div class="tl_cell"></div>
+              <div class="top_row"></div>
 
-            <div class="tl_cell"></div>
-            <div class="top_row"></div>
             <div class="left_col"></div>
             <div class="grid">
+
 
             </div>
 
